# plataforma-tcc

./: pyproject.toml
corrige_aqui/: manage.py
corrige_aqui/arquivos-github/: criar-repositorio-python.py
corrige_aqui/arquivos-github/c/.github/workflows/: workflow.yaml
corrige_aqui/arquivos-para-github/: criar-repositorio-python.py
corrige_aqui/arquivos-para-github/c/: template-simples-c.c
corrige_aqui/atividades/: adicionar-ou-listar.html  admin.py  index.html  listagem-repositorios.html  listar-alunos-repo.html  models.py  resultados-visao-aluno.html  urls.py  views.py
corrige_aqui/atividades/migrations/: 0001_initial.py  0002_remove_aluno_nota_remove_aluno_repo_name_aluno_nome_and_more.py
corrige_aqui/atividades/templates/: listar-alunos-repo.html  logs-aluno.html  resultados-visao-aluno.html
corrige_aqui/corrige_aqui/: asgi.py  settings.py  urls.py  wsgi.py
corrige_aqui/plataforma/: index.html  matricular.html  turmas.html  urls.py  views.py
