[tool.poetry]
name = "tcc-plataforma"
version = "0.1.0"
description = ""
authors = ["SilasTests <silas.madara@gmail.com>"]
readme = "README.md"
packages = [{include = "tcc_plataforma"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
jsonfield = "^3.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
